recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:2: error: not found: value list
  if(list.tail==Nil){
     ^increasing:5: error: not found: value list
    if(list.head<=list.head.head){
       ^increasing:5: error: not found: value list
    if(list.head<=list.head.head){
                  ^