recursion.cons.lessons.recursion.cons.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  if(list.tail==Nil){
    return true
  }else{
    if(list.head<=list.head.head){
      return increasing(l.tail)
    }else{
      return false
    }
  }
}